
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u_char ;


 int memset (scalar_t__*,char,int) ;

int create_bof_string(u_char *data, int len) {
    memset(data, 'a', len);
    data[len] = 0;
    return(len + 1);
}
