; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1614.c_create_bof_string.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1614.c_create_bof_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_bof_string(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64*, i64** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @memset(i64* %5, i8 signext 97, i32 %6)
  %8 = load i64*, i64** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i64, i64* %8, i64 %10
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, 1
  ret i32 %13
}

declare dso_local i32 @memset(i64*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
